fix: extra spacing and common css for grid

--- a/components/grid/grid.css
+++ b/components/grid/grid.css
@@ -7,88 +7,103 @@ body {
 
 .component-container {
     margin-left: 5rem;
-
 }
-.component-heading{
+
+.component-heading {
     margin-bottom: 1rem;
 }
+
 .component-description {
     margin-top: 1rem;
     margin-bottom: 1rem;
     font-size: 1.5rem;
 }
+
+/* common css for grid1 and grid2 start here*/
 .grid-container {
     height: auto;
     width: 95%;
     padding: 1rem;
     margin-bottom: 4rem;
     margin-top: 2rem;
-    border: 2px solid var(--border-color); 
-
+    border: 2px solid var(--border-color);
 }
 
-.grid-area1{
+.grid {
     width: 100%;
-    height: 30vh;
+    grid-gap: 1rem;
+    text-align: center;
     padding: 10px;
     border: 1px solid var(--border-color);
     display: grid;
-    grid-template-rows: 1fr 1fr ;
-    grid-template-columns: repeat(5, 1fr) ;
-    grid-gap: 1rem;
-    text-align: center;
-}
-.grid-item1{
-    grid-column: 1/3;
-}
-.grid-item3{
-    grid-column: 4/6;
-}
-.grid-item5{
-    grid-column: 2/5;
 }
 
-.grid-area2{
-    width: 100%;
-    height: 40vh;
-    padding: 10px;
-    border: 1px solid var( --border-color);
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr ;
-    grid-template-columns: repeat(7, 1fr) ;
-    grid-gap: 1rem;
-    text-align: center;
-}
-.grid-color{
+.grid-color {
     background-color: var(--primary-color);
     color: var(--button-secondary-color);
     border-radius: 5px;
 }
-.item1{
-    grid-column:  1/4;
+
+/* common css for grid1 and grid2 end  here*/
+.grid-area1 {
+    height: 30vh;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(5, 1fr);
 }
-.item2{
-    grid-column:  4/6;
+
+.grid-area2 {
+    height: 40vh;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(7, 1fr);
 }
-.item3{
-    grid-column: 6/8;
-}
-.item4{
+
+/* css for grid1 item */
+.grid-item1 {
     grid-column: 1/3;
 }
-.item5{
+
+.grid-item3 {
+    grid-column: 4/6;
+}
+
+.grid-item5 {
+    grid-column: 2/5;
+}
+
+/* css for grid2 item  */
+.item1 {
+    grid-column: 1/4;
+}
+
+.item2 {
+    grid-column: 4/6;
+}
+
+.item3 {
+    grid-column: 6/8;
+}
+
+.item4 {
+    grid-column: 1/3;
+}
+
+.item5 {
     grid-column: 3/5;
 }
-.item6{
+
+.item6 {
     grid-column: 5/8;
 
 }
-.item7{
+
+.item7 {
     grid-column: 1/2;
 }
-.item8{
+
+.item8 {
     grid-column: 2/4;
 }
-.item9{
+
+.item9 {
     grid-column: 4/8;
 }
